--- a/keyOS/res/values/strings.xml
+++ b/keyOS/res/values/strings.xml
@@ -323,10 +323,12 @@
 
     <string name="icon_shape_system_default">Set by System</string>
     <string name="title_missing_notification_access">Notification access needed.</string>
-    
+
     <string name="activity_not_found">App not installed.</string>
-    
+
     <string name="out_of_space">No more room on the Desktop.</string>
     <string name="hotseat_out_of_space">No more room in the Dock.</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
