add exit and settings option

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -356,4 +356,5 @@
     <string name="folder_grid_size">Folder Grid</string>
     <string name="disable_auto_fill_title">Disable Icon Auto Fill</string>
     <string name="folder_icon_scale_title">Folder Icon Scale</string>
+    <string name="password">Password</string>
 </resources>
