--- a/keyOS/res/values/strings.xml
+++ b/keyOS/res/values/strings.xml
@@ -168,8 +168,8 @@
 
     <!-- Section 12 -->
 
-    <string name="settings_button_text">KeyOS Settings</string>
-    <string name="wallpaper_button_text">Exit KeyOS</string>
+    <string name="settings_button_text">Kiosk Settings</string>
+    <string name="wallpaper_button_text">Exit Kiosk</string>
 
     <string name="customize">Customize</string>
 
