--- a/keyOS/res/values/strings.xml
+++ b/keyOS/res/values/strings.xml
@@ -332,4 +332,94 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+<!--    KeyOS-->
+
+    <string name="password">Password</string>
+    <string name="activities">Activities</string>
+    <string name="cancel">Cancel</string>
+    <string name="done">Done</string>
+    <string name="phoneBook">Phone book</string>
+    <string name="manual">Manual</string>
+    <string name="create_new">Create New</string>
+    <string name="contact">Contact</string>
+    <string name="name">Name</string>
+    <string name="number">Number</string>
+    <string name="hide_icon">Hide Icon</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">hide launcher / shortcut icon from KeyOS home</string>
+    <string name="block_activities">Block Activities</string>
+    <string name="block_unwanted_pages_activities_windows">Block unwanted pages / activities / windows</string>
+    <string name="time_limit">Time Limit</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Set timing restriction Eg. 1hr per day</string>
+    <string name="app_info">App info</string>
+    <string name="system_settings">System settings</string>
+    <string name="restrictions">Restrictions</string>
+    <string name="edit_app">EDIT APP</string>
+    <string name="import_amp_export"><![CDATA[Import & Export]]></string>
+    <string name="scan">Scan</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Scan keyOS qr code to apply same settings policy</string>
+    <string name="generate">Generate</string>
+    <string name="generate_keyos_qr_code">Generate keyOS qr code</string>
+    <string name="import_text">Import</string>
+    <string name="import_keyos_setting_from_storage">Import keyOS setting from storage</string>
+    <string name="export_text">Export</string>
+    <string name="import_keyos_setting_to_storage">Import keyOS setting to storage</string>
+    <string name="recovery_email">Recovery Email</string>
+    <string name="old_password">Old Password</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="allow_calls">Allow Calls</string>
+    <string name="incoming">Incoming</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">This will allow all incoming calls to your mobile</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">This will allow all outgoing calls to your mobile</string>
+    <string name="whitelist_contacts">Whitelist Contacts</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Contacts save under whitelist only able to call you</string>
+    <string name="blacklist_contacts">Blacklist Contacts</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">Contacts save under blacklist won\'t be able to call you</string>
+    <string name="automatic_whitelist">Automatic whitelist</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Allow calls if contact available in phone book</string>
+    <string name="additional">Additional</string>
+    <string name="whitelist_amp_blacklist"><![CDATA[Whitelist & blacklist]]></string>
+    <string name="phone_book">PHONE BOOK</string>
+    <string name="import_amp_export_settings"><![CDATA[Import & export settings]]></string>
+    <string name="apps">Apps</string>
+    <string name="services">Services</string>
+    <string name="single_app">Single App</string>
+    <string name="apps_amp_services"><![CDATA[APPS & SERVICES]]></string>
+    <string name="peripheral">PERIPHERAL</string>
+    <string name="advance">ADVANCE</string>
+    <string name="disable_camera">Disable Camera</string>
+    <string name="call_settings">Call Settings</string>
+    <string name="web_filter">Web Filter</string>
+    <string name="screen_saver">Screen Saver</string>
+    <string name="phone_settings">Phone Settings</string>
+    <string name="notification_panel">Notification Panel</string>
+    <string name="security">SECURITY</string>
+    <string name="launch">Launch</string>
+    <string name="if_you_face_any_trouble_for_making_calls_kindly_allow_all_the_services_related_to_phone_call_n_nhint_search_for_phone_in_service_section">If you face any trouble for making calls kindly allow all the services related to phone call <br /> <br />  hint: Search for phone in service section</string>
+    <string name="web_filter_is_a_powerful_service_which_allow_you_to_block_unwanted_websites_n_nsupported_browsers_chrome_firefox_brave_edge_opera_duckduckgo">Web filter is a powerful service which allow you to block unwanted websites <br /> <br /> Supported browsers : chrome, firefox, brave, edge, opera, duckduckgo></string>
+    <string name="off">Off</string>
+    <string name="whitelist_websites">Whitelist Websites</string>
+    <string name="websites_save_under_whitelist_only_able_to_access_by_the_browser">Websites save under whitelist only able to access by the browser</string>
+    <string name="blacklist_websites">Blacklist Websites</string>
+    <string name="websites_save_under_blacklist_won_t_be_able_to_access_by_browser">Websites save under blacklist won\'t be able to access by browser</string>
+    <string name="block_adult_websites">Block adult websites</string>
+    <string name="this_will_automatically_block_800_adult_websites">This will automatically block 800+ adult websites</string>
+    <string name="whitelist">WHITELIST</string>
+    <string name="add_websites">Add website</string>
+    <string name="website">Website</string>
+    <string name="please_enter_the_website_which_you_want_to_add_in_whitelist_eg_www_google_com">Please enter the website which you want to add in whitelist Eg: www.google.com</string>
+    <string name="otp_verification">Otp Verification</string>
+    <string name="please_enter_the_4_digit_otp_which_we_sent_to_your_registered_email_address">Please enter the 4 digit otp which we sent to your registered email address</string>
+    <string name="if_you_haven_t_change_your_password_yet_nplease_try_1234">if you haven\'t change your password yet <br />please try 1234</string>
+    <string name="forget">forget ?</string>
+    <string name="user_agreement">User Agreement</string>
+    <string name="we_will_store_the_list_of_installed_app_and_phone_number_in_your_device_this_data_will_taken_from_your_device_only_if_you_are_using_qrcode_feature_and_this_data_will_automatically_removed_from_server_with_in_one_hour">We will store the list of installed app and phone number in your device. This data will taken from your device only if you are using QrCode feature and this data will automatically removed from server with in one hour</string>
+    <string name="no_thanks">No thanks</string>
+    <string name="accept_amp_continue"><![CDATA[Accept & continue]]></string>
+    <string name="usage_access">Usage Access</string>
+    <string name="overlay">Overlay</string>
+    <string name="write_settings">Write Settings</string>
+    <string name="sound_access">Sound Access</string>
+    <string name="other_permissions">Other Permissions</string>
+    <string name="accessibility">Accessibility</string>
+
 </resources>
