Added tamil language

--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -141,4 +141,168 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"ஆப்ஸும் அறிவிப்புகளும் ஆஃப் செய்யப்பட்டுள்ளன"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"மூடுக"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"மூடப்பட்டது"</string>
+
+
+    <string name="app_name">கீஓஎஸ்</string>
+    <string name="exit_button_text">கியோஸ்கிலிருந்து வெளியேறு</string>
+    <string name="button_overview_mode">கண்ணோட்டம் பயன்முறை</string>
+    <string name="password">கடவுச்சொல்</string>
+    <string name="activities">செயல்பாடுகள்</string>
+    <string name="cancel">ரத்துசெய்</string>
+    <string name="done">முடிந்தது</string>
+    <string name="phoneBook">தொலைபேசி புத்தகம்</string>
+    <string name="manual">கையேடு</string>
+    <string name="create_new">புதிதாக உருவாக்கு</string>
+    <string name="contact">தொடர்பு கொள்ளுங்கள்</string>
+    <string name="name">பெயர்</string>
+    <string name="number">எண்</string>
+    <string name="hide_icon">ஐகானை மறைக்க</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">கீஓஎஸ் வீட்டிலிருந்து துவக்கி /குறுக்குவழி ஐகானை மறைக்கவும்</string>
+    <string name="block_activities">செயல்பாடுகளைத் தடு</string>
+    <string name="block_unwanted_pages_activities_windows">தேவையற்ற பக்கங்கள் /செயல்பாடுகள் /சாளரங்களைத் தடு</string>
+    <string name="time_limit">நேர வரம்பு</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">நேர கட்டுப்பாட்டை அமைக்கவும் எ.கா. ஒரு நாளைக்கு 1 மணி</string>
+    <string name="system_settings">கணினி அமைப்புகளை</string>
+    <string name="restrictions">கட்டுப்பாடுகள்</string>
+    <string name="edit_app">பயன்பாட்டைத் திருத்து</string>
+    <string name="import_amp_export">இறக்குமதி ஏற்றுமதி</string>
+    <string name="scan">ஊடுகதிர்</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">ஒரே அமைப்புக் கொள்கையைப் பயன்படுத்த keyOS qr குறியீட்டை ஸ்கேன் செய்யவும்</string>
+    <string name="generate">உருவாக்கு</string>
+    <string name="generate_keyos_qr_code">KeyOS QrCode ஐ உருவாக்கவும்</string>
+    <string name="import_text">இறக்குமதி</string>
+    <string name="import_keyos_setting_from_storage">சேமிப்பகத்திலிருந்து keyOS அமைப்பை இறக்குமதி செய்க</string>
+    <string name="export_text">ஏற்றுமதி</string>
+    <string name="import_keyos_setting_to_storage">கீஓஎஸ் அமைப்பை சேமிப்பகத்திற்கு இறக்குமதி செய்க</string>
+    <string name="recovery_email">மீட்பு மின்னஞ்சல்</string>
+    <string name="old_password">பழைய கடவுச்சொல்</string>
+    <string name="confirm_password">கடவுச்சொல்லை உறுதிப்படுத்தவும்</string>
+    <string name="allow_calls">அழைப்புகளை அனுமதிக்கவும்</string>
+    <string name="incoming">வருகை</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">இது உங்கள் மொபைலுக்கு உள்வரும் அனைத்து அழைப்புகளையும் அனுமதிக்கும்</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">இது உங்கள் மொபைலுக்கு வெளிச்செல்லும் அனைத்து அழைப்புகளையும் அனுமதிக்கும்</string>
+    <string name="whitelist_contacts">அனுமதிப்பட்டியல் தொடர்புகள்</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">உங்களை அழைக்க மட்டுமே தொடர்புகள் அனுமதிப்பட்டியலின் கீழ் சேமிக்கப்படும்</string>
+    <string name="blacklist_contacts">தடுப்புப்பட்டியல் தொடர்புகள்</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"தடுப்புப்பட்டியலின் கீழ் சேமிக்கப்படும் தொடர்புகள் உங்களை அழைக்க முடியாது"</string>
+    <string name="automatic_whitelist">தானியங்கி அனுமதிப்பட்டியல்</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">தொலைபேசி புத்தகத்தில் தொடர்பு இருந்தால் அழைப்புகளை அனுமதிக்கவும்</string>
+    <string name="additional">கூடுதல்</string>
+    <string name="whitelist_amp_blacklist">அனுமதிப்பட்டியல் தடுப்புப்பட்டியல்</string>
+    <string name="phone_book">தொலைபேசி புத்தகம்</string>
+    <string name="import_amp_export_settings">ஏற்றுமதி அமைப்புகளை இறக்குமதி செய்க</string>
+    <string name="services">சேவைகள்</string>
+    <string name="single_app">ஒற்றை பயன்பாடு</string>
+    <string name="apps_amp_services">பயன்பாடுகள் சேவைகள்</string>
+    <string name="peripheral">புற</string>
+    <string name="advance">அட்வான்ஸ்</string>
+    <string name="disable_camera">கேமராவை முடக்கு</string>
+    <string name="call_settings">அழைப்பு அமைப்புகள்</string>
+    <string name="web_filter">வலை வடிகட்டி</string>
+    <string name="screen_saver">ஸ்கிரீன் சேவர்</string>
+    <string name="phone_settings">தொலைபேசி அமைப்புகள்</string>
+    <string name="notification_panel">அறிவிப்பு குழு</string>
+    <string name="security">பாதுகாப்பு</string>
+    <string name="launch">தொடங்க</string>
+    <string name="phone_call_subheading">அழைப்புகளைச் செய்வதில் உங்களுக்கு ஏதேனும் சிக்கல் ஏற்பட்டால், தொலைபேசி அழைப்பு தொடர்பான அனைத்து சேவைகளையும் தயவுசெய்து அனுமதிக்கவும்</string>
+    <string name="phone_call_subheading_hint">குறிப்பு: சேவை பிரிவில் தொலைபேசியைத் தேடுங்கள்</string>
+    <string name="web_filter_subheading">வலை வடிப்பான் என்பது தேவையற்ற வலைத்தளங்களைத் தடுக்க உங்களை அனுமதிக்கும் சக்திவாய்ந்த சேவையாகும்</string>
+    <string name="web_filter_supported_browsers">ஆதரிக்கப்படும் உலாவிகள்: குரோம், பயர்பாக்ஸ், துணிச்சலான, விளிம்பு, ஓபரா, டக் டக்கோ</string>
+    <string name="off">முடக்கு</string>
+    <string name="whitelist_websites">அனுமதிப்பட்டியல் வலைத்தளங்கள்</string>
+    <string name="whitelist_website_info">வலைத்தளங்கள் உலாவியால் மட்டுமே அணுகக்கூடிய அனுமதிப்பட்டியலின் கீழ் சேமிக்கப்படுகின்றன</string>
+    <string name="blacklist_websites">தடுப்புப்பட்டியல் வலைத்தளங்கள்</string>
+    <string name="blacklist_websites_info">"தடுப்புப்பட்டியலின் கீழ் சேமிக்கும் வலைத்தளங்கள் உலாவி மூலம் அணுக முடியாது"</string>
+    <string name="block_adult_websites">வயது வந்தோருக்கான வலைத்தளங்களைத் தடு</string>
+    <string name="adult_websites_info">இது தானாக 800 வயதுவந்த வலைத்தளங்களைத் தடுக்கும்</string>
+    <string name="whitelist">அனுமதிப்பட்டியல்</string>
+    <string name="add_websites">வலைத்தளத்தைச் சேர்க்கவும்</string>
+    <string name="website">இணையதளம்</string>
+    <string name="add_websites_subheading">அனுமதிப்பட்டியலில் நீங்கள் சேர்க்க விரும்பும் வலைத்தளத்தை உள்ளிடவும் எ.கா: www.google.com</string>
+    <string name="otp_verification">Otp சரிபார்ப்பு</string>
+    <string name="otp_verification_subheading">உங்கள் பதிவு செய்யப்பட்ட மின்னஞ்சல் முகவரிக்கு நாங்கள் அனுப்பிய 4 இலக்க otp ஐ உள்ளிடவும்</string>
+    <string name="password_prompt_subheading">"நீங்கள் இன்னும் உங்கள் கடவுச்சொல்லை மாற்றவில்லை என்றால் 12 n தயவுசெய்து 1234 ஐ முயற்சிக்கவும்"</string>
+    <string name="forget">மறக்கவா?</string>
+    <string name="user_agreement">பயனர் ஒப்பந்தம்</string>
+    <string name="user_agreement_2">நிறுவப்பட்ட பயன்பாடு மற்றும் தொலைபேசி எண்ணின் பட்டியலை உங்கள் சாதனத்தில் சேமிப்போம். நீங்கள் QrCode அம்சத்தைப் பயன்படுத்தினால் மட்டுமே இந்தத் தரவு உங்கள் சாதனத்திலிருந்து எடுக்கப்படும், மேலும் இந்தத் தரவு ஒரு மணி நேரத்தில் சேவையகத்திலிருந்து தானாகவே அகற்றப்படும்</string>
+    <string name="no_thanks">நன்றி இல்லை</string>
+    <string name="accept_amp_continue">ஏற்றுக்கொள்</string>
+    <string name="usage_access">பயன்பாட்டு அணுகல்</string>
+    <string name="overlay">மேலடுக்கு</string>
+    <string name="write_settings">அமைப்புகளை எழுதுங்கள்</string>
+    <string name="sound_access">ஒலி அணுகல்</string>
+    <string name="other_permissions">பிற அனுமதிகள்</string>
+    <string name="accessibility">அணுகல்</string>
+    <string name="device_id">சாதன ஐடி</string>
+    <string name="feedback_amp_suggestions">பரிந்துரைகள்</string>
+    <string name="quick_survey">விரைவான ஆய்வு</string>
+    <string name="bug_report">பிழை அறிக்கை</string>
+    <string name="visit">வருகை</string>
+    <string name="rate">விகிதம்</string>
+    <string name="share">பகிர்</string>
+    <string name="app_info">பயன்பாட்டு தகவல்</string>
+    <string name="check_for_update">மேம்படுத்தல் சோதிக்க</string>
+    <string name="developer_contact">டெவலப்பர் தொடர்பு</string>
+    <string name="terms_amp_conditions">விதிமுறை</string>
+    <string name="privacy_policy">தனியுரிமைக் கொள்கை</string>
+    <string name="outgoing">வெளிச்செல்லும்</string>
+    <string name="always_on">ஆன்</string>
+    <string name="always_off">ஆஃப்</string>
+    <string name="dont_care">"கவலைப்படாதே"</string>
+    <string name="landscape">இயற்கை</string>
+    <string name="portrait">உருவப்படம்</string>
+    <string name="silent">அமைதியாக</string>
+    <string name="normal">இயல்பானது</string>
+    <string name="select_activity_sunHeading">நீங்கள் தடுக்க விரும்பும் நடவடிக்கைகள் /பக்கங்கள் /சாளரங்களைத் தேர்ந்தெடுக்கவும்</string>
+    <string name="apps">பயன்பாடுகள்</string>
+    <string name="whitelist_apps">அனுமதிப்பட்டியல் பயன்பாடுகள்</string>
+    <string name="whitelist_services">அனுமதிப்பட்டியல் சேவைகள்</string>
+    <string name="whitelist_apps_subheading">"நீங்கள் அணுக விரும்பும் பயன்பாடுகளைத் தேர்ந்தெடுக்கவும்"</string>
+    <string name="whitelist_service_heading">"நீங்கள் எந்த சேவைகளை அணுக விரும்புகிறீர்கள் என்பதைத் தேர்ந்தெடுக்கவும்"</string>
+    <string name="single_app_subheading">"எந்த பயன்பாட்டை முன்புறத்தில் கிடைக்க விரும்புகிறீர்கள் என்பதைத் தேர்ந்தெடுக்கவும்"</string>
+    <string name="blacklist">தடுப்புப்பட்டியல்</string>
+    <string name="contacts_blacklist_subheading">"பிளாக்லிஸ்ட்டின் கீழ் சேமிக்கப்பட்ட தொடர்புகள் இனி உங்கள் Android தொலைபேசியை அழைக்க முடியாது"</string>
+    <string name="contacts_whitelist_subheading">அனுமதிப்பட்டியலின் கீழ் சேமிக்கப்பட்ட தொடர்புகள் இனி உங்கள் Android தொலைபேசியை மட்டுமே அழைக்க முடியும்</string>
+    <string name="delete">அழி</string>
+    <string name="delete_contact_subheading">இந்த உருப்படிகளை நீக்க விரும்புகிறீர்களா?</string>
+    <string name="invalid_name">தவறான பெயர்</string>
+    <string name="invalid_number">தவறான எண்</string>
+    <string name="hours">மணி</string>
+    <string name="minutes">நிமிடங்கள்</string>
+    <string name="file_exported_to">கோப்பு ஏற்றுமதி செய்யப்பட்டது</string>
+    <string name="select_a_file_to_upload">பதிவேற்ற ஒரு கோப்பைத் தேர்ந்தெடுக்கவும்</string>
+    <string name="please_install_a_file_manager">கோப்பு மேலாளரை நிறுவவும்.</string>
+    <string name="invalid_backup_file">தவறான காப்பு கோப்பு</string>
+    <string name="imported_successfully">வெற்றிகரமாக இறக்குமதி செய்யப்பட்டது</string>
+    <string name="password_successfully_send">கடவுச்சொல் வெற்றிகரமாக உங்கள் மின்னஞ்சல் முகவரிக்கு அனுப்பப்பட்டது</string>
+    <string name="password_recovery_failed">கடவுச்சொல் மீட்பு தோல்வியுற்றது</string>
+    <string name="recovery_email_not_registered">மீட்பு மின்னஞ்சல் பதிவு செய்யப்படவில்லை</string>
+    <string name="change_your">உங்கள் மாற்ற</string>
+    <string name="forgot_caps">மறந்துவிட்டேன் ?</string>
+    <string name="password_successfully_changed">உங்கள் கடவுச்சொல் வெற்றிகரமாக மாற்றப்பட்டுள்ளது</string>
+    <string name="invalid_email_address">தவறான மின்னஞ்சல் முகவரி</string>
+    <string name="password_min">கடவுச்சொல்லில் நிமிடம் 8 எழுத்துக்கள் இருக்க வேண்டும்</string>
+    <string name="old_password_must_not_new">பழைய கடவுச்சொல் புதிய கடவுச்சொல்லாக இருக்கக்கூடாது</string>
+    <string name="password_not_match">கடவுச்சொல் பொருந்தவில்லை</string>
+    <string name="invalid_old_pasword">பழைய கடவுச்சொல் தவறானது</string>
+    <string name="phonebook_blacklist_subheading">"தடுப்புப்பட்டியலில் நீங்கள் சேர்க்க விரும்பும் தொடர்புகளைத் தேர்ந்தெடுக்கவும்"</string>
+    <string name="phonebook_whitelist_subheading">"அனுமதிப்பட்டியலில் நீங்கள் சேர்க்க விரும்பும் தொடர்புகளைத் தேர்ந்தெடுக்கவும்"</string>
+    <string name="camera_not_init">கேமரா துவக்க பிழை:</string>
+    <string name="please_wait">தயவுசெய்து காத்திருங்கள்</string>
+    <string name="invalid_qr">தவறான QrCode!</string>
+    <string name="successfully_done">வெற்றிகரமாக முடிந்தது!</string>
+    <string name="on_caps">இயக்கப்பட்டது</string>
+    <string name="off_caps">முடக்கப்பட்டுள்ளது</string>
+    <string name="webfilter_blacklist_subheading">"தடுப்புப்பட்டியலின் கீழ் சேமிக்கும் வலைத்தளங்கள் உலாவி மூலம் அணுக முடியாது"</string>
+    <string name="webfilter_whitelist_subheading">வலைத்தளங்கள் உலாவியால் மட்டுமே அணுகக்கூடிய அனுமதிப்பட்டியலின் கீழ் சேமிக்கப்படுகின்றன</string>
+    <string name="dialog_website_blacklist_subheading">தடுப்புப்பட்டியலில் நீங்கள் சேர்க்க விரும்பும் வலைத்தளத்தை உள்ளிடவும் எ.கா: www.google.com</string>
+    <string name="dialog_website_white_subheading">அனுமதிப்பட்டியலில் நீங்கள் சேர்க்க விரும்பும் வலைத்தளத்தை உள்ளிடவும் எ.கா: www.google.com</string>
+    <string name="invalid_url">தவறான வலைதள முகவரி</string>
+    <string name="invalid_otp">தவறான Otp</string>
+    <string name="user_agreement_1">கீஓஎஸ் மேம்படுத்த மற்றும் அனைத்து அம்சங்களும் சரியாக வேலை செய்கிறதா என்பதை உறுதிப்படுத்த, உங்கள் சில பயன்பாட்டுத் தரவு அநாமதேயமாக சேகரிக்கப்படும். எங்கள் தனியுரிமைக் கொள்கை மற்றும் விதிமுறைகளை நீங்கள் படித்து ஏற்றுக்கொள்ள வேண்டும். கீஓஎஸ் பயன்படுத்துவதற்கு முன்</string>
+    <string name="select_all">அனைத்தையும் தெரிவுசெய்</string>
+    <string name="initializing_desktop">டெஸ்க்டாப்பைத் துவக்குகிறது…</string>
+    <string name="loading_settings">அமைப்புகளை ஏற்றுகிறது</string>
+    <string name="exiting_keyos">KeyOS இலிருந்து வெளியேறுகிறது</string>
+    <string name="dialog_qrcode_subheading">உங்கள் KeyOS சாதனத்தில் அதே அமைப்புகளைப் பயன்படுத்த இந்த KeyOS Qr குறியீட்டை ஸ்கேன் செய்யுங்கள்</string>
 </resources>
