--- a/keyOS/res/values/strings.xml
+++ b/keyOS/res/values/strings.xml
@@ -332,7 +332,7 @@
 
     <!--    KeyOS-->
 
-    <string name="app_name" >"KeyOS"</string>
+    <string name="app_name" >KeyOS</string>
     <string name="exit_button_text">Exit Kiosk</string>
     <string name="widget_button_text">Widgets</string>
     <string name="button_overview_mode">Overview Mode</string>
@@ -354,12 +354,12 @@
     <string name="set_timing_restriction_eg_1hr_per_day">Set timing restriction Eg. 1hr per day</string>
     <string name="system_settings">System settings</string>
     <string name="restrictions">Restrictions</string>
-    <string name="edit_app">EDIT APP</string>
-    <string name="import_amp_export"><![CDATA[Import & Export]]></string>
+    <string name="edit_app">Edit App</string>
+    <string name="import_amp_export">Import &amp; Export</string>
     <string name="scan">Scan</string>
     <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Scan keyOS qr code to apply same settings policy</string>
     <string name="generate">Generate</string>
-    <string name="generate_keyos_qr_code">Generate keyOS qr code</string>
+    <string name="generate_keyos_qr_code">Generate keyOS QrCode</string>
     <string name="import_text">Import</string>
     <string name="import_keyos_setting_from_storage">Import keyOS setting from storage</string>
     <string name="export_text">Export</string>
@@ -374,47 +374,49 @@
     <string name="whitelist_contacts">Whitelist Contacts</string>
     <string name="contacts_save_under_whitelist_only_able_to_call_you">Contacts save under whitelist only able to call you</string>
     <string name="blacklist_contacts">Blacklist Contacts</string>
-    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">Contacts save under blacklist won\'t be able to call you</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"Contacts save under blacklist won't be able to call you"</string>
     <string name="automatic_whitelist">Automatic whitelist</string>
     <string name="allow_calls_if_contact_available_in_phone_book">Allow calls if contact available in phone book</string>
     <string name="additional">Additional</string>
-    <string name="whitelist_amp_blacklist"><![CDATA[Whitelist & blacklist]]></string>
-    <string name="phone_book">PHONE BOOK</string>
-    <string name="import_amp_export_settings"><![CDATA[Import & export settings]]></string>
+    <string name="whitelist_amp_blacklist">Whitelist &amp; blacklist</string>
+    <string name="phone_book">Phone Book</string>
+    <string name="import_amp_export_settings">Import &amp; export settings</string>
     <string name="services">Services</string>
     <string name="single_app">Single App</string>
-    <string name="apps_amp_services"><![CDATA[APPS & SERVICES]]></string>
-    <string name="peripheral">PERIPHERAL</string>
-    <string name="advance">ADVANCE</string>
+    <string name="apps_amp_services">Apps &amp; Services</string>
+    <string name="peripheral">Peripheral</string>
+    <string name="advance">Advance</string>
     <string name="disable_camera">Disable Camera</string>
     <string name="call_settings">Call Settings</string>
     <string name="web_filter">Web Filter</string>
     <string name="screen_saver">Screen Saver</string>
     <string name="phone_settings">Phone Settings</string>
     <string name="notification_panel">Notification Panel</string>
-    <string name="security">SECURITY</string>
+    <string name="security">Security</string>
     <string name="launch">Launch</string>
-    <string name="phone_call_subheading">"If you face any trouble for making calls kindly allow all the services related to phone call\n\nhint: Search for phone in service section"</string>
-    <string name="web_filter_subheading">"Web filter is a powerful service which allow you to block unwanted websites\n\nSupported browsers : chrome, firefox, brave, edge, opera, duckduckgo"</string>
+    <string name="phone_call_subheading">If you face any trouble for making calls kindly allow all the services related to phone call</string>
+    <string name="phone_call_subheading_hint">hint: Search for phone in service section</string>
+    <string name="web_filter_subheading">Web filter is a powerful service which allow you to block unwanted websites</string>
+    <string name="web_filter_supported_browsers">Supported browsers : chrome, firefox, brave, edge, opera, duckduckgo</string>
     <string name="off">Off</string>
     <string name="whitelist_websites">Whitelist Websites</string>
     <string name="whitelist_website_info">Websites save under whitelist only able to access by the browser</string>
     <string name="blacklist_websites">Blacklist Websites</string>
-    <string name="blacklist_websites_info">Websites save under blacklist won\'t be able to access by browser</string>
+    <string name="blacklist_websites_info">"Websites save under blacklist won't be able to access by browser"</string>
     <string name="block_adult_websites">Block adult websites</string>
     <string name="adult_websites_info">This will automatically block 800+ adult websites</string>
-    <string name="whitelist">WHITELIST</string>
+    <string name="whitelist">Whitelist</string>
     <string name="add_websites">Add website</string>
     <string name="website">Website</string>
     <string name="add_websites_subheading">Please enter the website which you want to add in whitelist Eg: www.google.com</string>
     <string name="otp_verification">Otp Verification</string>
     <string name="otp_verification_subheading">Please enter the 4 digit otp which we sent to your registered email address</string>
-    <string name="password_prompt_subheading">if you haven\'t change your password yet <br/>please try 1234</string>
+    <string name="password_prompt_subheading">"if you haven't change your password yet\nplease try 1234"</string>
     <string name="forget">forget ?</string>
     <string name="user_agreement">User Agreement</string>
     <string name="user_agreement_2">We will store the list of installed app and phone number in your device. This data will taken from your device only if you are using QrCode feature and this data will automatically removed from server with in one hour</string>
     <string name="no_thanks">No thanks</string>
-    <string name="accept_amp_continue"><![CDATA[Accept & continue]]></string>
+    <string name="accept_amp_continue">Accept &amp; continue</string>
     <string name="usage_access">Usage Access</string>
     <string name="overlay">Overlay</string>
     <string name="write_settings">Write Settings</string>
@@ -422,7 +424,7 @@
     <string name="other_permissions">Other Permissions</string>
     <string name="accessibility">Accessibility</string>
     <string name="device_id">Device ID</string>
-    <string name="feedback_amp_suggestions"><![CDATA[Feedback & suggestions]]></string>
+    <string name="feedback_amp_suggestions">Feedback &amp; suggestions</string>
     <string name="quick_survey">Quick survey</string>
     <string name="bug_report">Bug report</string>
     <string name="visit">Visit</string>
@@ -431,12 +433,12 @@
     <string name="app_info">App info</string>
     <string name="check_for_update">Check for update</string>
     <string name="developer_contact">Developer contact</string>
-    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
+    <string name="terms_amp_conditions">Terms &amp; Conditions</string>
     <string name="privacy_policy">Privacy Policy</string>
-
+    <string name="outgoing">Outgoing</string>
     <string name="always_on">Always on</string>
     <string name="always_off">Always off</string>
-    <string name="dont_care">Don\'t care</string>
+    <string name="dont_care">"Don't care"</string>
     <string name="landscape">Landscape</string>
     <string name="portrait">Portrait</string>
     <string name="silent">Silent</string>
@@ -449,7 +451,7 @@
     <string name="whitelist_service_heading">"Select which services you want to\ngive access"</string>
     <string name="single_app_subheading">"Select which app you want available\nin foreground"</string>
     <string name="blacklist">Blacklist</string>
-    <string name="contacts_blacklist_subheading">Contacts saved under Blacklist won\'t be able to call your Android phone anymore</string>
+    <string name="contacts_blacklist_subheading">"Contacts saved under Blacklist won't be able to call your Android phone anymore"</string>
     <string name="contacts_whitelist_subheading">Contacts saved under Whitelist only able to call your Android phone anymore</string>
     <string name="delete">Delete</string>
     <string name="delete_contact_subheading">Are you sure you want to delete this items</string>
@@ -458,7 +460,7 @@
     <string name="hours">Hours</string>
     <string name="minutes">Minutes</string>
     <string name="file_exported_to">File exported to</string>
-    <string name="select_a_file_to_uplode">Select a File to Upload</string>
+    <string name="select_a_file_to_upload">Select a File to Upload</string>
     <string name="please_install_a_file_manager">Please install a File Manager.</string>
     <string name="invalid_backup_file">Invalid backup file</string>
     <string name="imported_successfully">Imported Successfully</string>
@@ -481,17 +483,18 @@
     <string name="successfully_done">Successfully done!</string>
     <string name="on_caps">ON</string>
     <string name="off_caps">OFF</string>
-    <string name="webfilter_blacklist_subheading">Websites save under blacklist won\'t be able to access by browser</string>
+    <string name="webfilter_blacklist_subheading">"Websites save under blacklist won't be able to access by browser"</string>
     <string name="webfilter_whitelist_subheading">Websites save under whitelist only able to access by the browser</string>
     <string name="dialog_website_blacklist_subheading">Please enter the website which you want to add in blacklist Eg: www.google.com</string>
     <string name="dialog_website_white_subheading">Please enter the website which you want to add in whitelist Eg: www.google.com</string>
     <string name="invalid_url">Invalid Url</string>
     <string name="invalid_otp">Invalid Otp</string>
-    <string name="user_agreement_1"><![CDATA[To improve KeyOS and make sure all feature work properly, some of your usage data will be collected anonymously. You must read and agree to our Privacy Policy and Terms & Conditions. before using KeyOS]]></string>
-    <string name="select_all">SELECT ALL</string>
-
-<!--    <string name="failed">Failed!</string>-->
-
+    <string name="user_agreement_1">To improve KeyOS and make sure all feature work properly, some of your usage data will be collected anonymously. You must read and agree to our Privacy Policy and Terms &amp; Conditions. before using KeyOS</string>
+    <string name="select_all">Select All</string>
+    <string name="initializing_desktop">Initializing desktop…</string>
+    <string name="loading_settings">Loading settings</string>
+    <string name="exiting_keyos">Exiting keyOS</string>
+    <string name="dialog_qrcode_subheading">Scan this KeyOS Qr code to apply same settings in your KeyOS device</string>
 
 
 </resources>
